--- a/quiz-app/style.css
+++ b/quiz-app/style.css
@@ -29,8 +29,8 @@ label{
 .container {
     padding: 35px 40px 35px 40px;
     background-color: white;
-    display: inline-block;
     position: relative;
+    display: inline-block;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -44,7 +44,12 @@ label{
 
 button{
     border: none;
-    padding: 30px 40px;
-    
+    width: 100%;    
+    background-color: rgb(202, 89, 202);
+    border-radius: 9px;
+}
 
+button:hover{
+    transition: t1,2s,ease-in-out,0,0,forwards ;
+    box-shadow: 1px 1px 9px rgb(188, 71, 211,0.5),-1px -1px  9px  rgb(202,89,202,0.5);
 }
