i think that the question slider works now

--- a/quiz-app/style.css
+++ b/quiz-app/style.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+html{
+scroll-behavior: smooth;
+}
+
 body {
     background: linear-gradient(to bottom right, #f0f0f0 , #b5d4f0 ); 
     height: 100vh;
