got the logic of hamburger menu

--- a/practise-fontawesome/css/style.css
+++ b/practise-fontawesome/css/style.css
@@ -15,10 +15,15 @@
 
 .nav-item a{
     color: rgb(214, 205, 205);
+    display: none;
 }
 
 .span-burger{
     color:black ;
     width: 10px;
     height: 3px;
+}
+
+#nav-toggle{   
+    display: flex;
 }
